Fix overflow youtube video

--- a/docs/assets/css/htop.css
+++ b/docs/assets/css/htop.css
@@ -130,6 +130,26 @@ img {
    max-width: 100%;
 }
 
+.video-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 600px) {
+  .video-wrapper {
+    position: relative;
+    height: 0;
+    padding-top: 56.25%;
+  }
+  .video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 @media (max-width: 999px) {
    .content {
       margin-top: 50px;
